[package]
name = "adventofcode2022"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "cookies", "blocking" ] }

[lib]
name = "common"
path = "common.rs"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"

[[bin]]
name = "day03"
path = "day03.rs"
